--- a/数据库/基础知识.md
+++ b/数据库/基础知识.md
@@ -232,6 +232,11 @@ if (updated row > 0) {
 * 一般情况下，读多写少更适合用乐观锁，读少写多更适合用悲观锁。
 * 乐观锁在不发生取锁失败的情况下，开销比悲观锁小，但是一旦发生失败就需要回滚，开销比较大。因此乐观锁适合用在资源竞争不激烈的场景，而悲观锁适合用在资源竞争激烈的场景。
 
+### MVCC机制
+* 概念：MVCC，Multiple Version Concurrent Control，多版本并发控制，是一种乐观锁的实现方法，可以实现低代价的无锁并发。
+* 实现：为每个事务分配单向增长的版本号，从而为每个事务修改保存一个版本，读操作只读事务开始前的版本号，在事务结束后再次读取版本号，如果一致则认为没有并发操作发生，直接提交事务；如果不一致则认为有并发操作已提交修改，需要回滚事务后重试。
+* 好处：读操作不需要阻塞写操作，写操作也不需要阻塞读操作，同时还可以避免脏读和不可重复读。
+
 ### delete、truncate和drop命令的区别
 * delete命令：用来删除表的全部或某些数据行，会触发这个表上所有的delete触发器。执行delete之后，用户需要提交或回滚来执行删除或撤销删除。
 * truncate命令：用来删除表中所有数据，这个操作不能回滚，也不会触发这个表上的触发器，比不带where的delete命令删除所有数据更快，且使用事务日志的资源更少。
@@ -243,11 +248,40 @@ if (updated row > 0) {
 * 主键：数据库表中可以唯一标示每个存储对象的超键。一张表只能有一个主键，且主键不能为空值。
 * 外键：在表A中存在的表B的主键，称该键为表B在表A中的外键。
 
-### 笛卡尔积、内连接、左外连接、右外连接、交叉连接的区别
-
 ### 关系型数据库和非关系型数据库的区别
 
-### MVCC机制
+#### 关系型数据库
+* 概念：关系型数据库是指采用了关系模型来组织数据的数据库，即二维表格模型。
+* 优点：
+    * 二维表结构贴近逻辑世界，相对于网状结构、层次结构等其他模型来说更容易理解。
+    * 通用的SQL语言使得操作关系型数据库十分方便。
+    * 实体完整性、参照完整性和用户定义的完整性可以减少数据冗余。
+* 瓶颈：
+    * 在高并发读写需求中，磁盘I/O是一个很大的瓶颈。
+    * 在一张包含海量数据的表中查询效率很低。
+    * 数据库的表结构难以升级和扩展。
+* 典型代表：MySQL和Oracle。
+
+#### 非关系型数据库NoSQL
+* 概念：与关系型数据库相对，非关系型数据库是指不使用关系结构来组织数据、且一般不遵循ACID的数据存储系统。
+* 理念：非关系型数据库提出另一种组织数据的方式，比如键值对存储，而且结构不固定，比如每个存储对象可以有不同的属性，可以根据自己的需要添加自定义的键值对，这样就可以不局限于固定的结构，减少查询开销。相对地，由于约束少了，非关系型数据库难以体现设计的完整性。
+* 分类：
+    * 面向高性能读写的key-value数据库：有极高的并发读写性能，主要代表是Redis。
+    * 面向海量数据访问的文档数据库：可以在海量数据中快速查找数据，主要代表为MongoDB。
+    * 面向可扩展性的分布式数据库：可以解决传统数据库存在的可扩展性缺陷，可以适应数据量的增加以及数据结构的变化。
+
+#### 二者使用场景区别
+* 事务的一致性：关系型数据库适用于所有对一致性有要求的系统，如银行系统；非关系型数据库适用于对一致性要求不太严格的应用，比如网页应用，两个人看到同一好友的数据更新时间相差几秒是可以容忍的。
+* 读写性能：因为维护一致性付出的代价就是读写性能差，像微博这样的应用是无法忍受的，因此需要使用非关系型数据库。
+* 可扩展性：关系型数据库具有固定的表结构，可扩展性很差，难以应付系统升级、功能增加而带来的数据结构变动，因此需要使用非关系型数据库。
 
 ### 常见的聚合函数
+* count(*)：统计表中所有记录的个数。
+* count(列名)：统计一列中所有值的个数，重复值也会被当作有效的记录。
+* count(distinct 列名)：统计一列中所有值的个数，其中重复的记录只会被记录一次。
+* sum(列名)：计算一列值的总和。
+* avg(列名)：计算一列值的平均值。
+* max(列名)：找出一列值中的最大值。
+* min(列名)：找出一列值中的最小值。
+
 
