--- a/数据库/常用数据库.md
+++ b/数据库/常用数据库.md
@@ -1,39 +1,60 @@
 # 常用数据库
 
 ## MySQL
+一种开源的关系型数据库，使用SQL进行数据库管理。
 
-### 存储引擎
-在MySQL 5.5之前，MyISAM是mysql的默认数据库引擎，其由早期的ISAM（Indexed Sequential Access Method：有索引的顺序访问方法）所改良。虽然MyISAM性能极佳，但却有一个显著的缺点： 不支持事务处理。不过，MySQL也导入了另一种数据库引擎InnoDB，以强化参考完整性与并发违规处理机制，后来就逐渐取代MyISAM。
+### MySQL的存储引擎：MyISAM和InnoDB
+MyISAM由早期的ISAM（Indexed Sequential Access Method，有索引的顺序访问方法）改良，虽然性能极佳，但它有一个显著的缺点：不支持事务处理，因此MySQL引入了另一种引擎InnoDB，它可以支持ACID兼容的事务功能，可以强化参考完整性与并发违规处理机制，后来就逐渐取代MyISAM。
 
-　　InnoDB是MySQL的数据库引擎之一，其由Innobase oy公司所开发，2006年五月由甲骨文公司并购。与传统的ISAM、MyISAM相比，InnoDB的最大特色就是支持ACID兼容的事务功能，类似于PostgreSQL。目前InnoDB采用双轨制授权，一是GPL授权，另一是专有软件授权。具体地，MyISAM与InnoDB作为MySQL的两大存储引擎的差异主要包括：
+#### 存储结构
+* 每个MyISAM表在磁盘上存储成三个文件，分别存储表定义、数据文件和索引文件。
+* 而InnoDB所有的表都保存在同一个数据文件中，也可能是多个文件，或者是独立的表空间文件，InnoDB表的大小只受限于操作系统文件的大小，一般为2GB。
 
-存储结构：每个MyISAM在磁盘上存储成三个文件：第一个文件的名字以表的名字开始，扩展名指出文件类型。.frm文件存储表定义，数据文件的扩展名为.MYD (MYData)，索引文件的扩展名是.MYI (MYIndex)。InnoDB所有的表都保存在同一个数据文件中（也可能是多个文件，或者是独立的表空间文件），InnoDB表的大小只受限于操作系统文件的大小，一般为2GB。
+#### 存储空间
+* MyISAM可被压缩，占据的存储空间较小，支持静态表、动态表、压缩表三种不同的存储格式。
+* InnoDB需要更多的内存和存储，它会在主内存中建立其专用的缓冲池用于高速缓冲数据和索引。
 
-存储空间：MyISAM可被压缩，占据的存储空间较小，支持静态表、动态表、压缩表三种不同的存储格式。InnoDB需要更多的内存和存储，它会在主内存中建立其专用的缓冲池用于高速缓冲数据和索引。
+#### 可移植性：备份及恢复
+* MyISAM的数据是以文件的形式存储，所以数据转移很方便，在备份和恢复时也可单独对某个表进行操作。
+* InnoDB免费的方案可以是拷贝数据文件、备份，或者用`mysqldump`命令，在数据量大时相对麻烦。
 
-可移植性、备份及恢复：MyISAM的数据是以文件的形式存储，所以在跨平台的数据转移中会很方便，同时在备份和恢复时也可单独针对某个表进行操作。InnoDB免费的方案可以是拷贝数据文件、备份 binlog，或者用 mysqldump，在数据量达到几十G的时候就相对痛苦了。
+#### 事务支持
+* MyISAM强调性能，每次查询具有原子性，其执行速度比InnoDB类型更快，但是不提供事务支持。
+* InnoDB提供事务、外键等高级数据库功能，具有事务提交、回滚和崩溃修复能力，支持四种隔离级别。
 
-事务支持：MyISAM强调的是性能，每次查询具有原子性，其执行数度比InnoDB类型更快，但是不提供事务支持。InnoDB提供事务、外键等高级数据库功能，具有事务提交、回滚和崩溃修复能力。
+#### 锁机制
+* MyISAM只支持表级锁，用户在操作MyISAM表时，`SELECT`、`UPDATE`、`DELETE`和`INSERT`语句都会给表自动加锁。
+    * 表共享读锁：不会阻塞其他用户对同一表的读操作，但会阻塞写操作。
+    * 表独占写锁：会阻塞其他用户对同一表的读和写操作。
+* InnoDB支持事务和行级锁，可以大幅提高并发性能，但是InnoDB的行锁只对WHERE子句中的主键有效，非主键的WHERE会锁全表。
+    * 行共享锁：允许一个事务去读一行，阻止其他事务获得相同数据集的行排他锁。用`SELECT ... IN SHARE MODE`可以获取行共享锁。
+    * 行排他锁：允许一个事务更新数据，阻止其他事务获得相同数据集的行共享锁和行排他锁。用`SELECT ... FOR UPDATE`可以获取行排他锁。
+* InnoDB的间隙锁（Next-Key锁）
+    * 概念：当检索范围数据并请求共享或排他锁时，InnoDB会给符合条件的数据的索引项加锁，间隙是指键值在条件范围内但并不存在的记录，InnoDB也会对这些记录加锁。
+    * 举例：假如item表中有10条记录，其id的值分别是1到10，查询语句`SELECT * FROM item WHERE id > 9 FOR UPDATE`是一个范围条件的检索，InnoDB不仅会对符合条件的id值为10的记录加锁，也会对id大于10（这些记录并不存在）的“间隙”加锁。
+    * 注意事项：InnoDB使用间隙锁的目的是防止幻读，以满足相关隔离级别的要求，但会阻塞符合条件范围内键值的并发插入，这往往会造成严重的锁等待。
 
-AUTO_INCREMENT：在MyISAM中，可以和其他字段一起建立联合索引。引擎的自动增长列必须是索引，如果是组合索引，自动增长可以不是第一列，它可以根据前面几列进行排序后递增。InnoDB中必须包含只有该字段的索引，并且引擎的自动增长列必须是索引，如果是组合索引也必须是组合索引的第一列。
+#### 索引和主键
+* MyISAM允许没有任何索引和主键的表存在，所有索引都是非聚集索引。
+* InnoDB中如果没有设定主键或者非空唯一索引，就会自动生成一个用户不可见的主键，主索引是聚集索引，其他索引是非聚集索引。
 
-表锁差异：MyISAM只支持表级锁，用户在操作MyISAM表时，select、update、delete和insert语句都会给表自动加锁，如果加锁以后的表满足insert并发的情况下，可以在表的尾部插入新的数据。InnoDB支持事务和行级锁。行锁大幅度提高了多用户并发操作的新能，但是InnoDB的行锁，只是在WHERE的主键是有效的，非主键的WHERE都会锁全表的。
-
-全文索引：MyISAM支持 FULLTEXT类型的全文索引；InnoDB不支持FULLTEXT类型的全文索引，但是innodb可以使用sphinx插件支持全文索引，并且效果更好。
-
-表主键：MyISAM允许没有任何索引和主键的表存在，索引都是保存行的地址。对于InnoDB，如果没有设定主键或者非空唯一索引，就会自动生成一个6字节的主键(用户不可见)，数据是主索引的一部分，附加索引保存的是主索引的值。
-
-表的具体行数：MyISAM保存表的总行数，select count() from table;会直接取出出该值；而InnoDB没有保存表的总行数，如果使用select count() from table；就会遍历整个表，消耗相当大，但是在加了wehre条件后，myisam和innodb处理的方式都一样。
-
-CURD操作：在MyISAM中，如果执行大量的SELECT，MyISAM是更好的选择。对于InnoDB，如果你的数据执行大量的INSERT或UPDATE，出于性能方面的考虑，应该使用InnoDB表。DELETE从性能上InnoDB更优，但DELETE FROM table时，InnoDB不会重新建立表，而是一行一行的删除，在innodb上如果要清空保存有大量数据的表，最好使用truncate table这个命令。
-
-外键：MyISAM不支持外键，而InnoDB支持外键。
-
-　　通过上述的分析，基本上可以考虑使用InnoDB来替代MyISAM引擎了，原因是InnoDB自身很多良好的特点，比如事务支持、存储过程、视图、行级锁、外键等等。尤其在并发很多的情况下，相信InnoDB的表现肯定要比MyISAM强很多。另外，必须需要注意的是，任何一种表都不是万能的，合适的才是最好的，才能最大的发挥MySQL的性能优势。如果是不复杂的、非关键的Web应用，还是可以继续考虑MyISAM的，这个具体情况具体考虑。
-
-### MySQL并发（事务、隔离级别、锁）
+#### 外键
+MyISAM不支持外键，而InnoDB支持外键。
 
 ### MySQL中char、varchar和text的区别
+
+#### char(n)
+* 存储定长字符串，可以指定默认值，索引效率非常高，必须在括号里定义长度n，超过会被截断，n的最大值是255。
+* n也是存储空间的实际长度，不管实际字符串有多长，都会占用n个字符的空间，后面会用空格填充，如果原数据末尾就存在空格，检索取出时会丢失。
+
+#### varchar(n)
+* 存储变长字符串，可以指定默认值，存储效率没有char(n)高，可以在括号里定义长度n，超过会被截断，所以实际可以保存的最大字符串长度是n-1，因为在字符串被截断时，会留一个空间保存字符串结束的标记。
+* 保存数据的时候不进行空格自动填充，而且如果数据存在空格，保存和检索时尾部的空格仍会保留。
+* varchar(n)可以指定的长度上限是65535字节，但实际情况会有1-3个字节存储字符串的长度信息，所以实际可以保存的字符串的最大长度为65532字节。
+
+#### text 
+* text是用来存储较长字符串的结构，其存储原理与varchar(n)相同，效率也相似。
+* text与varchar(n)的区别主要是：text不能限定最大长度n，也不能指定默认值，而且使用外部存储来存储字符长度，不占用字符串空间，最大支持字符串长度为65535个字节。
 
 ### MySQL的慢查询日志
 * MySQL的慢查询日志用来记录响应时间超过阀值的查询操作，通过该日志可以找出有问题的SQL语句。
