--- a/操作系统/进程管理.md
+++ b/操作系统/进程管理.md
@@ -3,8 +3,7 @@
 ## 进程
 
 ### 进程的概念
-* 进程是一个具有一定独立功能的程序关于某个数据集合的一次运行活动。
-* 进程是操作系统进行资源分配和调度的一个独立单位。
+进程是一个具有一定独立功能的程序关于某个数据集合的一次运行活动，是操作系统进行资源分配和调度的独立单位。
 
 ### 进程的状态与转换
 * 三态模型
@@ -22,9 +21,8 @@
 
 ### 进程间通信方式
 * 消息队列（MessageQueue）：消息队列是由消息的链表，存放在内核中并由消息队列标识符标识。
-* 共享内存（SharedMemory）：共享内存就是映射一段能被其他进程所访问的内存，这段共享内存由一个进程创建，但多个进程都可以访问。共享内存是最快的IPC方式，它是针对其他进程间通信方式运行效率低而专门设计的。它往往与其他通信机制，如信号两，配合使用，来实现进程间的同步和通信。
-* 管道（Pipe）：管道是一种半双工的通信方式，数据只能单向流动，而且只能在具有亲缘关系的进程间使用。进程的亲缘关系通常是指父子进程关系。
-* 信号量（Semaphore）：信号量是一个计数器，可以用来控制多个进程对共享资源的访问。它常作为一种锁机制，防止某进程正在访问共享资源时，其他进程也访问该资源。因此，主要作为进程间以及同一进程内不同线程之间的同步手段。
+* 共享内存（SharedMemory）：共享内存就是多个进程使用内存来存取数据，是最快的进程间通信方式方式，往往与其他同步机制配合使用，比如信号量。
+* 管道（Pipe）：管道是一种半双工的通信方式，数据只能单向流动，而且只能在父子进程间使用。
 * 套接字（Socket）：套接字也是一种进程间通信机制，与其他通信机制不同的是，它可用于不同机器间的进程通信。
 * 信号（Signal）：信号是一种比较复杂的通信方式，用于通知接收进程某个事件已经发生。
 
@@ -32,8 +30,7 @@
 
 ### 线程概念与多线程模型
 * 线程是进程的一条执行路径，是调度的基本单位，同一个进程中的所有线程共享进程获得的主存空间和资源。
-* 进程是执行着的应用程序，而线程是进程内部的一个执行序列。
-* 一个进程可以有多个线程。
+* 进程是执行着的应用程序，而线程是进程内部的一个执行序列，一个进程可以有多个线程。
 
 ### 线程的上下文切换及其开销
 * 线程的上下文切换是指：当一条线程的时间片用完后，操作系统会暂停该线程，并保存该线程相应的信息，然后再选择另一条线程去执行。
@@ -67,9 +64,6 @@
 * 中级调度：中级调度又称中程调度。引入中程调度的主要目的是为了提高内存利用率和系统吞吐量。中级调度实际上就是存储器管理中的对换功能。
 * 低级调度：低级调度通常也称为进程调度或短程调度，它所调度的对象是进程（或内核级线程），进程调度是最基本的一种调度，在多道批处理、分时、实时三种类型的OS中，都必须配置这级调度。
 
-### 调度时机、切换与过程
-### 调度的基本准则
-### 调度方式抢占与非抢占
 ### 典型调度算法
 * 先来先服务调度算法
 * 短作业（短任务、短进程、短线程）优先调度算法
@@ -107,5 +101,4 @@
 * 死锁检测：
     * 每当一个线程获得了锁，会在线程和锁相关的数据结构中将其记下。每当有线程请求锁，也需要记录在这个数据结构中。当一个线程请求锁失败时，这个线程可以遍历锁的关系图看看是否有死锁发生。
     * 检测出死锁时，一个可行的做法是释放所有线程的锁，各自等待一段随机时间后重试；一个更好的方案是给这些线程设置优先级，让一个或几个线程回退，剩下的线程就像没发生死锁一样继续保持着它们需要的锁。
-
 
