--- a/数据库/基础知识.md
+++ b/数据库/基础知识.md
@@ -276,12 +276,12 @@ if (updated row > 0) {
 * 可扩展性：关系型数据库具有固定的表结构，可扩展性很差，难以应付系统升级、功能增加而带来的数据结构变动，因此需要使用非关系型数据库。
 
 ### 常见的聚合函数
-* count(*)：统计表中所有记录的个数。
-* count(列名)：统计一列中所有值的个数，重复值也会被当作有效的记录。
-* count(distinct 列名)：统计一列中所有值的个数，其中重复的记录只会被记录一次。
-* sum(列名)：计算一列值的总和。
-* avg(列名)：计算一列值的平均值。
-* max(列名)：找出一列值中的最大值。
-* min(列名)：找出一列值中的最小值。
+* `count(*)`：统计表中所有记录的个数。
+* `count(列名)`：统计一列中所有值的个数，重复值也会被当作有效的记录。
+* `count(distinct 列名)`：统计一列中所有值的个数，其中重复的记录只会被记录一次。
+* `sum(列名)`：计算一列值的总和。
+* `avg(列名)`：计算一列值的平均值。
+* `max(列名)`：找出一列值中的最大值。
+* `min(列名)`：找出一列值中的最小值。
 
 
