--- a/计算机网络/计算机网络参考模型.md
+++ b/计算机网络/计算机网络参考模型.md
@@ -58,7 +58,7 @@
     * PSH：表示有DATA数据传输；
     * RST：表示连接重置；
     * UGR：表示紧急。
-* 窗口（16位）：本机期望一次接收的字节数，即本机接收窗口大小。告诉对方在不等待确认的情况下，可以发来多大的数据。这里表示的最大长度是2^16-1 = 65535，如需要使用更大的窗口大小，需要使用选项中的窗口扩大因子选项。、
+* 窗口（16位）：本机期望一次接收的字节数，即本机接收窗口大小。告诉对方在不等待确认的情况下，可以发来多大的数据。这里表示的最大长度是2^16 - 1 = 65535，如需要使用更大的窗口大小，需要使用选项中的窗口扩大因子选项。、
 * 校验和（16位）：源主机和目的主机根据TCP报文段以及伪报头的内容计算校验和。在伪报头中存放着来自IP报头以及TCP报文段长度信息。与UDP一样，伪报头并不在网络中传输，并且在校验和中包含伪报头的目的是为了防止目的主机错误地接收存在路由的错误数据报。
 * 紧急指针（16位）：仅在URG=1时才有意义，它指出本报文段中的紧急数据的字节数（紧急数据在普通数据前面）。注意：即使窗口为零时也可发送紧急数据。例如，如果报文段的序号是1000，前8个字节都是紧急数据，那么紧急指针就是8。紧急指针一般用来使用户可以中止进程。
 * 选项、填充字段：可能包括窗口扩大因子、时间戳等选项。长度可变，最长可达40字节，当没有使用选项时，TCP首部长度是20字节。填充用于保证选项字段的长度为32bit的整数倍。
