--- a/数据库/常用数据库.md
+++ b/数据库/常用数据库.md
@@ -142,10 +142,15 @@ MyISAM不支持外键，而InnoDB支持外键。
 * 将每个节点看成都是独立的Master，然后通过业务实现数据分片。
 * 为了解决读写分离模型的缺陷，可以使用数据分片模型。
 
-### Redis常用场景
-* 会话缓存（Session Cache）
-* 全页缓存（Full Page Cache）
-* 消息队列（Message Queue）
-* 排行榜／计数器
-* 发布／订阅
+### Redis备份策略
+Redis提供两种备份方法：RDB和AOF。
+
+#### RDB持久化
+* RDB是在某个时间点将内存中的所有数据的快照保存到磁盘上，在数据恢复时，可以恢复备份时间以前的所有数据，但无法恢复备份时间点后面的数据。
+* 默认情况下Redis在磁盘上创建二进制格式的命名为dump.rdb的数据快照，可以通过配置文件配置每隔N秒且数据集上至少有M个变化时创建快照，还可以配置是否对数据进行压缩、快照名称、存放快照的工作目录。
+
+#### AOF持久化
+* AOF是以协议文本的方式，将所有对数据库进行过写入的命令（及其参数）记录到 AOF 文件，以此达到记录数据库状态的目的。
+* 优点是基本可以实现数据无丢失（缓存的数据有可能丢失），缺点是随着数据量的持续增加，AOF文件也会越来越大。
+
 
