错误修正、修改表述

--- a/数据库/基础知识.md
+++ b/数据库/基础知识.md
@@ -58,7 +58,7 @@
 * 每次给字段新建一个索引，字段中的数据就会被复制一份出来生成索引结构，所以会增大表的体积。
 
 #### 二者比较
-通过聚集索引可以直接查到需要的数据，而通过非聚集索引需要先查到记录对应的主键值，再根据主键值通过聚集索引查到需要的数据。（（这里要上个图，网址是https://zhuanlan.zhihu.com/p/23624390））
+通过聚集索引可以直接查到需要的数据，而通过非聚集索引需要先查到记录对应的主键值，再根据主键值通过聚集索引查到需要的数据。（参考：[深入浅出数据库索引原理](https://zhuanlan.zhihu.com/p/23624390)）
 
 #### 主键和聚集索引的区别
 主键是一种唯一索引，它可以是聚集索引，也可以是非聚集索引。大多数数据库创建主键时，都会自动创建主键的聚集索引。
@@ -100,10 +100,10 @@
 * 幻读（虚读）：在同一事务中，用同一操作两次读取，得到的记录数不同，这是因为在两次读取期间被另一个事务添加或删除了某些记录并提交了。
 
 ### 事务的四大隔离级别
-* 可串行化（Serializable）：最高的隔离级别，可以解决幻读问题。读数据加表级共享锁，事务结束后释放；写数据加表级排他锁，事务结束后释放。不会发生脏读、不可重复读和幻读。
-* 可重复读（Repeatable reads）：可以解决不可重复读现象。读数据加行级共享锁，事务结束后释放；写数据加行级排他锁，事务结束后释放。可能发生幻读，不会发生脏读和不可重复读。
-* 提交读（Read committed）：只能读到其他事务已经提交的操作修改的数据。读数据加行级共享锁，读完该行就释放；写数据加行级排他锁，事务结束后释放。可能发生不可重复读和幻读，不会发生脏读。
-* 未提交读（Read uncommitted）：最低的隔离级别，可能读到其他事务中未提交的操作修改的数据。读数据不加锁；写数据加行级共享锁，写完该行就释放。可能发生脏读、不可重复读和幻读。
+* 可串行化（Serializable）：最高的隔离级别，可以解决幻读问题。读数据加表级锁，事务结束后释放；写数据加表级锁，事务结束后释放。不会发生脏读、不可重复读和幻读。
+* 可重复读（Repeatable reads）：可以解决不可重复读现象。读数据加行级锁，事务结束后释放；写数据加行级锁，事务结束后释放。可能发生幻读，不会发生脏读和不可重复读。
+* 提交读（Read committed）：只能读到其他事务已经提交的操作修改的数据。读数据加行级锁，读完该行就释放；写数据加行级锁，事务结束后释放。可能发生不可重复读和幻读，不会发生脏读。
+* 未提交读（Read uncommitted）：最低的隔离级别，可能读到其他事务中未提交的操作修改的数据。读数据不加锁；写数据加行级锁，写完该行就释放。可能发生脏读、不可重复读和幻读。
 
 ### JDBC对事务的支持
 * JDBC中Connection的auto-commit属性可以指定事务的粒度，默认为true：
@@ -156,15 +156,6 @@ try {
 * 缓存表：
     * 可以用一张缓存表来保存经常访问的数据，每次对数据的请求先在缓存表查，查不到再到整张表中查。
     * 相当于cache，常用于一张表的数据很多但其中经常访问的数据很少的情况。
-
-### 系统配置的优化
-* 操作系统配置的优化
-* MySQL配置文件的优化
-
-### 硬件的优化
-* CPU
-* 内存
-* 磁盘
 
 ## 常考点
 
@@ -283,5 +274,3 @@ if (updated row > 0) {
 * `avg(列名)`：计算一列值的平均值。
 * `max(列名)`：找出一列值中的最大值。
 * `min(列名)`：找出一列值中的最小值。
-
-
